--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<h1>Hi!</h1>
+<!doctype html>
+
+<html lang="en">
+
+<meta charset="utf-8">
+<!-- <meta name="viewport" content="width=1024"> -->
+
+<head>
+    <title>rgimad's website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./index.css"/>
+</head>
+
+<body>
+    <div class="content">
+        <h1>rgimad</h1>
+
+        <table width="100%">
+            <tr>
+                <td width="50%" valign="top">
+                    <h2>my blog</h2>
+                    <ul>
+                        <li><a href="posts/test_post.html">A test post</a></li>
+                        <li><a href="posts/test_post.html">A test post</a></li>
+                        <li><a href="posts/test_post.html">A test post</a></li>
+                    </ul>
+                </td>
+
+                <td width="50%" valign="top">
+                    <h2>services</h2>
+                    <ul>
+                        <li>
+                            <a href="codegen_tools/">Code generation tools</a><br>
+                            <small>a service for generating some typical pieces of code</small>
+                        </li>
+                    </ul> 
+                </td>  
+            </tr>
+        </table>
+
+        <footer>
+            <div style="float:right; text-align:right">
+                <a href="https://github.com/rgimad">github.com/rgimad</a><br><br>
+                <p>rustem.gimadutdinov@gmail.com</p>
+            </div>
+        </footer>
+    </div>
+</body>
+</html>
