created common style for posts, add test post

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <td width="50%" valign="top">
                     <h2>my blog</h2>
                     <ul>
-                        <li><a href="posts/test_post.html">A test post</a></li>
-                        <li><a href="posts/test_post.html">A test post</a></li>
-                        <li><a href="posts/test_post.html">A test post</a></li>
+                        <li><a href="posts/test_post">A test post</a></li>
+                        <li><a href="posts/test_post">A test post</a></li>
+                        <li><a href="posts/test_post">A test post</a></li>
                     </ul>
                 </td>
 
