--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="content">
-        <h1>rgimad</h1>
+        <h1>rgimad's website</h1>
 
         <table width="100%">
             <tr>
