add link to kolibrios skin viewer

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                             <a href="codegen_tools/">Code generation tools</a><br>
                             <small>a service for generating some typical pieces of code</small>
                         </li>
+                        <li>
+                            <a href="kolibrios_skin_viewer/">KolibriOS skin viewer</a><br>
+                            <small>Choose a .skn file and press View. Magic!</small>
+                        </li>
                     </ul> 
                 </td>  
             </tr>
