add FastKBD to project list

--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
                     </ul> 
                 </td>  
             </tr>
+            <tr>
+                <td width="50%" valign="top"> <!-- nothing --> </td>
+                <td width="50%" valign="top">
+                    <h2>projects</h2>
+                    <ul>
+                        <li>
+                            <a href="https://github.com/rgimad/FastKBD">FastKBD</a><br>
+                            <small>A simple and easy-to-use screen keyboard that gives fast access to many charachers with diacritics.</small>
+                        </li>
+                    </ul> 
+                </td>  
+            </tr>
         </table>
 
         <footer>
