Add easy blur tool

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                             <a href="kolibrios_skin_viewer/">KolibriOS skin viewer</a><br>
                             <small>Choose a .skn file and press View. Magic!</small>
                         </li>
+                        <li>
+                            <a href="easy_blur/">Easy blur</a><br>
+                            <small>Blur parts of images e.g. screenshots with personal data</small>
+                        </li>
                     </ul> 
                 </td>  
             </tr>
