--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                             <a href="easy_blur/">Easy blur</a><br>
                             <small>Blur parts of images e.g. screenshots with personal data</small>
                         </li>
+                        <li>
+                            <a href="svg_basic_tool">SVG tool</a><br>
+                            <small>Edit, view SVG and download them as rgba PNG</small>
+                        </li>
                     </ul> 
                 </td>  
             </tr>
