--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
                     <ul>
                         <li>
                             <a href="codegen_tools/">Code generation tools</a><br>
-                            <small>a service for generating some typical pieces of code</small>
-                        </li>
-                        <li>
-                            <a href="kolibrios_skin_viewer/">KolibriOS skin viewer</a><br>
-                            <small>Choose a .skn file and press View. Magic!</small>
+                            <small>Generate/convert code pieces without hallucinations:)</small>
                         </li>
                         <li>
                             <a href="easy_blur/">Easy blur</a><br>
@@ -47,13 +43,17 @@
                             <a href="svg_basic_tool">SVG tool</a><br>
                             <small>Edit, view SVG and download them as rgba PNG</small>
                         </li>
+                         <li>
+                            <a href="kolibrios_skin_viewer/">KolibriOS skin viewer</a><br>
+                            <small>Online viewer for KolibriOS operating system window skin format</small>
+                        </li>
                     </ul> 
                 </td>  
             </tr>
             <tr>
                 <td width="50%" valign="top"> <!-- nothing --> </td>
                 <td width="50%" valign="top">
-                    <h2>projects</h2>
+                    <h2>apps</h2>
                     <ul>
                         <li>
                             <a href="https://github.com/rgimad/FastKBD">FastKBD</a><br>
